# glow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: thread.cc  thread.h
src/config/: config.cc  config.h
src/logger/: log.h  log_appender.cc  log_appender.h  log_event.cc  log_event.h  log_formatter.cc  log_formatter.h  log_level.cc  log_level.h  log_manager.cc  log_manager.h  logger.cc  logger.h
src/util/: singleton.h  util.cc  util.h
test/: test_boost.cc  test_cofig.yaml  test_config.cc  test_logger.cc
